@@ -68,4 +68,3 @@ pgpsend:
 tag:
 	git tag -a dos2unix-${DOS2UNIX_VERSION} -m "Tagging dos2unix release ${DOS2UNIX_VERSION}."
 	git push origin dos2unix-${DOS2UNIX_VERSION}
-
