@@ -2,48 +2,48 @@
 #
 #   Copyright information
 #
-#	Copyright (C) 2010 Jari Aalto
-#	Copyright (C) 2010-2017 Erwin Waterlander
+#       Copyright (C) 2010 Jari Aalto
+#       Copyright (C) 2010-2017 Erwin Waterlander
 #
 #   License
 #
-#	Redistribution and use in source and binary forms, with or
-#	without modification, are permitted provided that the
-#	following conditions are met:
+#       Redistribution and use in source and binary forms, with or
+#       without modification, are permitted provided that the
+#       following conditions are met:
 #
-#	1. Redistributions of source code must retain the above
-#	   copyright notice, this list of conditions and the following
-#	   disclaimer.
+#       1. Redistributions of source code must retain the above
+#          copyright notice, this list of conditions and the following
+#          disclaimer.
 #
-#	2. Redistributions in binary form must reproduce the above
-#	   copyright notice, this list of conditions and the following
-#	   disclaimer in the documentation and/or other materials
-#	   provided with the distribution.
+#       2. Redistributions in binary form must reproduce the above
+#          copyright notice, this list of conditions and the following
+#          disclaimer in the documentation and/or other materials
+#          provided with the distribution.
 #
-#	THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR
-#	IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
-#	WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
-#	PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR(S) OF THIS
-#	FILE OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
-#	INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
-#	(INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
-#	GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
-#	INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
-#	WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
-#	NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
-#	THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
-#	DAMAGE.
+#       THIS SOFTWARE IS PROVIDED "AS IS" AND ANY EXPRESS OR
+#       IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED
+#       WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR
+#       PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE AUTHOR(S) OF THIS
+#       FILE OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT,
+#       INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES
+#       (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE
+#       GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
+#       INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY,
+#       WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+#       NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
+#       THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH
+#       DAMAGE.
 #
-#	The license text is copy of the FreeBSD License available at
-#	<http://www.gnu.org/copyleft/gpl.html> with following
-#	modifications: wording "THIS SOFTWARE IS PROVIDED BY THE
-#	FREEBSD PROJECT" was changed to "THIS SOFTWARE IS PROVIDED 'AS
-#	IS'" and wording "IN NO EVENT SHALL THE FREEBSD PROJECT" was
-#	changed to "IN NO EVENT SHALL THE AUTHOR(S)"
+#       The license text is copy of the FreeBSD License available at
+#       <http://www.gnu.org/copyleft/gpl.html> with following
+#       modifications: wording "THIS SOFTWARE IS PROVIDED BY THE
+#       FREEBSD PROJECT" was changed to "THIS SOFTWARE IS PROVIDED 'AS
+#       IS'" and wording "IN NO EVENT SHALL THE FREEBSD PROJECT" was
+#       changed to "IN NO EVENT SHALL THE AUTHOR(S)"
 #
 #   Description
 #
-# 	Convert *.pod files to manual pages.
+#       Convert *.pod files to manual pages.
 
 ifneq (,)
     This makefile requires GNU Make.
@@ -54,21 +54,21 @@ include ../../version.mk
 .PRECIOUS: %.pod
 
 # This variable *must* be set when calling
-PACKAGE		?= dos2unix
+PACKAGE         ?= dos2unix
 
 # Optional variables to set
-MANSECT		?= 1
-PODCENTER	?= $(DOS2UNIX_DATE)
+MANSECT         ?= 1
+PODCENTER       ?= $(DOS2UNIX_DATE)
 
 # Directories
-MANSRC		=
-MANDEST		= $(MANSRC)
+MANSRC          =
+MANDEST         = $(MANSRC)
 
-MANPOD		= $(MANSRC)$(PACKAGE).pod
-MANPAGE		= $(MANDEST)$(PACKAGE).$(MANSECT)
+MANPOD          = $(MANSRC)$(PACKAGE).pod
+MANPAGE         = $(MANDEST)$(PACKAGE).$(MANSECT)
 
-POD2MAN		= pod2man
-POD2MAN_FLAGS	=
+POD2MAN         = pod2man
+POD2MAN_FLAGS   =
 
 POFILES = $(wildcard ../../po-man/*.po)
 PODFILES = $(patsubst ../../po-man/%.po,../%/man1/dos2unix.pod,$(POFILES))
