@@ -1,4 +1,4 @@
-DOS2UNIX_VERSION = 7.3.5
-DOS2UNIX_VERSION_SHORT = 735
-DOS2UNIX_DATE = 2017-07-04
+DOS2UNIX_VERSION = 7.3.6-beta1
+DOS2UNIX_VERSION_SHORT = 736b1
+DOS2UNIX_DATE = 2017-08-05
 DOS2UNIX_AUTHOR = 'Erwin Waterlander'
